--- a/JenkinsFile
+++ b/JenkinsFile
@@ -39,3 +39,16 @@ pipeline {
         }
     }
 }
+stage('Unit Testing') {
+    steps {
+        script {
+            if (isUnix()) {
+                sh 'composer install'
+                sh 'vendor/bin/phpunit'
+            } else {
+                bat 'composer install'
+                bat 'vendor\\bin\\phpunit'
+            }
+        }
+    }
+}
